Fixed top white space

--- a/themes/hugo-serif-theme/assets/scss/components/_intro.scss
+++ b/themes/hugo-serif-theme/assets/scss/components/_intro.scss
@@ -6,7 +6,7 @@
   padding-bottom: 60px;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    padding-top: 140px;
+    padding-top: 45px; //MNB - Top space
     padding-bottom: 0px;
   }
   h1 {
